--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <quarkus.platform.version>3.19.2</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.2</surefire-plugin.version>
+        <quarkus.package.type>uber-jar</quarkus.package.type>
     </properties>
 
     <dependencyManagement>
